@@ -18,6 +18,9 @@ public class StartupGui extends Application{
 		try
 		{
 			// Gebruiker: JanJansens, Wachtwoord: 123456789
+			// Indien het niet werkt om op te starten,
+			// voeg onderstaande toe aan run configuration - vm arguments
+			// --module-path "\path\to\javafx-sdk-12.0.1\lib" --add-modules javafx.controls,javafx.fxml
 			AanmeldController aanmeldController = new AanmeldController(DatabaseSelector.ISLOCALHOST, new GebruikerDaoJpa());
 						
 			AanmeldenResponsiveController root = new AanmeldenResponsiveController(aanmeldController);
